--- a/javascript/effect/quiz05.html
+++ b/javascript/effect/quiz05.html
@@ -68,7 +68,7 @@
             {
                 answerType: "웹디자인기능사 2015년 05회",
                 answerNum: "2",
-                answerAsk: "점점 이동하면서 도형이 커지면서 팽창하는 패턴은? ",
+                answerAsk: "점점 이동하면서 도형이 커지며 팽창하는 패턴은? ",
                 answerChoice: {
                     1: "반사 운용",
                     2: "회전 운용",
