--- a/site/cardType/cardType01.html
+++ b/site/cardType/cardType01.html
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <section id="cardType" class="card__warp nexon section">
+    <section id="cardType" class="card__wrap nexon section">
         <h2>프론트앤드 강의</h2>
         <p>강의리스트입니다. </p>
         <div class="card__inner container">
