--- a/site/cardType/cardType03.html
+++ b/site/cardType/cardType03.html
@@ -87,13 +87,13 @@
         }
         .card__header figcaption {
             position: absolute;
-            right: 10px;
-            top: 10px;
-            padding: 6px 16px;
+            right: 11px;
+            top: 11px;
+            padding: 0px 20px;
             border-radius: 50px;
             background-color: #fff;
             text-align: center;
-            font-size: 14px;
+            font-size: 9 px;
             color: #7B7B7B;
         }
         .card__contents h3 {
@@ -124,6 +124,7 @@
         .card__footer h4 {
             text-align: right;
             color: #DD2A2A;
+            font-size: 14px;
         }
         .card__footer em {
             display: block;
@@ -144,6 +145,66 @@
     </style>
 </head>
 <body>
-    
+   <section id="cardType03" class="card__wrap score section"> 
+    <h2 class="blind">art</h2>
+    <!-- 시멘틱태그는 제목이 있어야됨 -->
+    <div class="card__inner container">
+        <article class="card">
+            <figure class="card__header">
+                <img src="img/card_bg03_01.jpg" alt="Art">
+                <figcaption>Artist</figcaption>
+            </figure>
+            <div class="card__contents">
+                <h3>미국의 미술가이자, 출력물 제작자
+                    ,그리고 영화 제작자 :  앤디 워홀</h3>
+                    <p>워홀의 작품 세계는 대부분 ‘미국의 물질문화’와
+                        연관되어 있다. 그는 돈, 달러 기호, 식품, 잡화, 
+                        구두, 유명인, 신문 스크랩 등을 그렸다.그에게 
+                        이런 주제들은 미국 문화의 가치를 의미했다.</p>
+            </div>
+            <div class="card__footer">
+                <h4>앤디 워홀<em>팝 아티스트</em></h4>
+                <span><img src="img/card_bg03_icon01.png" alt="팝 아티스트"></span>
+            </div>
+        </article>
+        <article class="card">
+            <figure class="card__header">
+                <img src="img/card_bg03_02.jpg" alt="Art">
+                <figcaption>Artist</figcaption>
+            </figure>
+            <div class="card__contents">
+                <h3>정신병을 예술로 승화 시킨 
+                    조각가,설치 미술가 : 쿠사마 야요이</h3>
+                    <p>쿠사마 야요이는 일본의 조각가 겸 설치미술가이다.
+                        자신의 환영을 가지고 작업하던 그녀는 1952년
+                        23세 때 마츠모토 시민 회관에서 열린 전시에서
+                        정신질환이 있다는 것을 알게된다.</p>
+            </div>
+            <div class="card__footer">
+                <h4>쿠사마 야요이<em>설치 미술가</em></h4>
+                <span><img src="img/card_bg03_icon02.png" alt="팝 아티스트"></span>
+            </div>
+        </article>
+        <article class="card">
+            <figure class="card__header">
+                <img src="img/card_bg03_03.jpg" alt="Art">
+                <figcaption>Artist</figcaption>
+            </figure>
+            <div class="card__contents">
+                <h3>천재 화가, 그래피티 아트, 앤디 워
+                    홀 많은 수식어 : 장미셸 바스키아 </h3>
+                    <p>장미셸 바스키아는 미국에서 태어난 작가이자
+                         그라피티 예술가이다. 아버지가 아이티계, 
+                         어머니가 푸에르토리코계다. 그는 
+                          뉴욕에서 그라피티 그룹 SAMO의 일원으로
+                           처음 이름을 날렸다.</p>
+            </div>
+            <div class="card__footer">
+                <h4>장미셸 바스키아 <em>팝 아티스트</em></h4>
+                <span><img src="img/card_bg03_icon03.png" alt="팝 아티스트"></span>
+            </div>
+        </article>
+    </div>
+   </section>
 </body>
 </html>
