--- a/javascript/index.html
+++ b/javascript/index.html
@@ -42,7 +42,7 @@
             width: calc(100% - 16px);
             box-sizing: border-box;
             height: calc(100vw - 32px);
-            border-radius: 12px;
+            border-radius: 20px;
             z-index: -1;
         }
 
@@ -552,7 +552,7 @@
                 <li><a href="study/for.html">반복문</a></li>
                 <li><a href="study/if.html">조건문</a></li>
                 <li><a href="study/type.html">데이터타입</a></li>
-                <li><a href="study/fuction.html">함수</a></li>
+                <li><a href="study/function.html">함수</a></li>
                 <li><a href="study/var.html">지역변수/전역변수</a></li>
             </ul>
         </nav>
