--- a/javascript/study/for.html
+++ b/javascript/study/for.html
@@ -33,7 +33,7 @@
             <li><a href="for.html">반복문</a></li>
             <li><a href="if.html">조건문</a></li>
             <li><a href="type.html">데이터타입</a></li>
-            <li><a href="fuction.html">함수</a></li>
+            <li><a href="function.html">함수</a></li>
             <li><a href="var.html">지역변수/전역변수</a></li>
             <li><a href="element.html">요소선택</a></li>
         </ul>
