--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -335,7 +335,7 @@ for( let i in num ){
 <pre><code class="language-js">const num = [100, 200, 300, 400, 500];
 
 //map()
-num.map(functionel(el){
+num.map(function(el){
     document.write(el);
 });
 
