--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/dracula.css">
 </head>
+
 <body>
     <header id="header">
         <h1><a href="index.html">Javascript</a></h1>
@@ -52,19 +54,22 @@
     <!-- //header -->
 
     <main id="main">
-       
+
         <div class="main_menu">
             <ul>
-                <li><a href = "#">01. 이벤트메서드 : addEventListener("click") : 클릭했을때</a></li>
-                <li><a href = "#">02. 이벤트메서드 : addEventListener("scroll"): 스크롤했을때</a></li>
-                <li><a href = "#">03. 이벤트메서드 : addEventListener("resize") : 브라우저 사이즈 변경됐을때</a></li>
-                <li><a href = "#">04. 이벤트메서드 : addEventListener("selectstart") : 텍스트 선택을 시작했을때</a></li>
-                <li><a href = "#">05. 이벤트메서드 : addEventListener("mousedown") : 마우스버튼을 눌렀을때</a></li>
-                <li><a href = "#">06. 이벤트메서드 : addEventListener("mouseup") : 마우스버튼을 떼는 경우</a></li>
-                <li><a href = "#">07. 이벤트메서드 : addEventListener("mousemove") : 마우스 움직이는 경우</a></li>
-                <li><a href = "#">04. 이벤트메서드 : addEventListener("drag") :  드래그 중인 경우</a></li>
-                <li><a href = "#">04. 이벤트메서드 : addEventListener("dragstart") : 드래그 시작했울 때</a></li>
-                <li><a href = "#">04. 이벤트메서드 : addEventListener("dragend") : 드래그 끝났을 때</a></li>
+                <li><a href="#">01. 이벤트메서드 : addEventListener("click") : 클릭했을때</a></li>
+                <li><a href="#">02. 이벤트메서드 : addEventListener("scroll"): 스크롤했을때</a></li>
+                <li><a href="#">03. 이벤트메서드 : addEventListener("resize") : 브라우저 사이즈 변경됐을때</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("selectstart") : 텍스트 선택을 시작했을때</a></li>
+                <li><a href="#">05. 이벤트메서드 : addEventListener("mousedown") : 마우스버튼을 눌렀을때</a></li>
+                <li><a href="#">06. 이벤트메서드 : addEventListener("mouseup") : 마우스버튼을 떼는 경우</a></li>
+                <li><a href="#">07. 이벤트메서드 : addEventListener("mousemove") : 마우스 움직이는 경우</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("drag") : 드래그 중인 경우</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("dragstart") : 드래그 시작했울 때</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("dragend") : 드래그 끝났을 때</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("keydown") : 키 눌렀을 때(한번만 실행)</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("keypress") : 키 눌렀을 때()</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("keydown") : 키 눌렀을 때(한번만 실행)</a></li>
             </ul>
         </div>
         <div class="main_script"></div>
@@ -77,4 +82,5 @@
     </footer>
     <!-- //footer -->
 </body>
+
 </html>
