--- a/javascript/effect/searchEffect01_javascript.html
+++ b/javascript/effect/searchEffect01_javascript.html
@@ -38,44 +38,14 @@
     <main id="main">
         <div class="search__wrap">
             <span>indexOf()를 이용하여 검색하기</span>
-            <h1>HTML 태그 검색하기</h1>
+            <h1>JAVASCRIPT<br>
+                메서드 검색하기</h1>
             <div class="search__box">
                 <label for="search">검색하기</label>
                 <input type="text" id="search" placeholder="HTML 태그를 입력해주세요!">
             </div>
 
             <div class="search__list">
-                <div class="html">
-                    <ul>
-                        <li data-name="a"><strong>a</strong> : a 태그는 다른 페이지 이동을 설정합니다.</li>
-                        <li data-name="abbr"><strong>abbr</strong> : abbr 태그는 줄임말이나 머리글자를 표현하는데 사용합니다.</li>
-                        <li data-name="acronym"><strong>acronym</strong> : acronym 태그는 줄임말이나 머리글자를 표현하는데 사용합니다.</li>
-                        <li data-name="address"><strong>address</strong> : address 태그는 웹 페이지의 연락처 정보를 설정합니다</li>
-                        <li data-name="applet"><strong>applet</strong> : applet 태그는 애플랫 요소를 설정합니다. 현재는 사용하지 않습니다.</li>
-                        <li data-name="area"><strong>area</strong> : area 태그는 이미지 맵의 영역을 정의합니다. </li>
-                        <li data-name="article"><strong>article</strong> : article 태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.</li>
-                        <li data-name="a"><strong>aside</strong> : aside 태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다.</li>
-                        <li data-name="a"><strong>audio</strong> : audio 태그는 오디오 파일을 설정합니다.</li>
-                        <li data-name="a"><strong>b</strong> : b 태그는 다른 텍스트와 구별 할 때 설정합니다.</li>
-                        <li data-name="a"><strong>base</strong> : base 태그는 모든 문서의 기본이 되는 URL을 설정합니다.</li>
-                        <li data-name="a"><strong>basefont</strong> : basefont 태그는 문서의 기본 폰트, 사이즈, 종류를 설정합니다.</li>
-                        <li data-name="a"><strong>bdi</strong> : bdi 태그는 텍스트의 출력 방향 영역을 설정합니다.</li>
-                        <li data-name="a"><strong>bdo</strong> : bdo 태그는 텍스트의 방향을 설정합니다.</li>
-                        <li data-name="a"><strong>big</strong> : big 태그는 텍스트의 크기를 크게 설정합니다.</li>
-                        <li data-name="a"><strong>blockquote</strong> : 태그는 긴 문장의 인용문을 설정합니다.</li>
-
-                    </ul>
-                </div>
-                <div class="css">
-                    <ul>
-                        <li data-name="aline-content"><strong>aline-content</strong>:.</li>
-                        <li data-name="aline-items"><strong>aline-items</strong>:.</li>
-                        <li data-name="aline-self"><strong>aline-self</strong>:.</li>
-                        <li data-name="all"><strong>all</strong>:.</li>
-                        <li data-name="animation"><strong>animation</strong>:.</li>
-                        <li data-name="animation-delay"><strong>animation-delay</strong>:.</li>
-                    </ul>
-                </div>
                 <div class="javascript">
                     <ul>
                         <li data-name="indexOf"><strong>indexOf</strong>:.</li>
@@ -84,10 +54,8 @@
                         <li data-name="substr"><strong>substr</substr>:.</li>
                         <li data-name="split"><strong>split</substr>:.</li>
                         <li data-name="trim"><strong>trim</substr>:.</li>
-
                     </ul>
                 </div>
-
             </div>
         </div>
     </main>
