--- a/site/imgType/imgType02.html
+++ b/site/imgType/imgType02.html
@@ -162,21 +162,21 @@
                 <figure class="image"><img src="img/img01-01.jpg"></figure>
                 <div class="blure">
                     <P class="tit">배우 수잔</P>
-                    <a class="more" href="/">자세히 보기</a>
+                    <a class="more" href="">자세히 보기</a>
                 </div>
             </article>
             <article class="content img2">
                 <figure class="image"><img src="img/img01-02.jpg"></figure>
                 <div class="blure">
                     <P class="tit">배우 앤디</P>
-                    <a class="more" href="/">자세히 보기</a>
+                    <a class="more" href="">자세히 보기</a>
                 </div>
             </article>
             <article class="content img3">
                 <figure class="image"><img src="img/img01-03.jpg"></figure>
                 <div class="blure">
                     <P class="tit">배우 헤일리</P>
-                    <a class="more" href="/">자세히 보기</a>
+                    <a class="more" href="">자세히 보기</a>
                 </div>
             </article>
         </div>
