--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -202,9 +202,12 @@ if (0) {
         <h3>(제어문 : 조건문, 반복문, 중지, 건너뛰기)</h3>
         <h3>05. 조건부 연산자(삼항 연산자)</h3>
         <p>
-            삼항연산자는 조건식의 결과(true, false)에 따라 결과값을 다르게 나오게 해주는 연산자<br>
-            조건식 ? 실행문1(조건식이 true 일때) : 실행문2(조건식이 false 일때)
+            <i>삼항연산자</i>는<i>조건식의 결과(true, false)</i> 에 따라 <i>결과값을 다르게</i> 나오게 해주는 연산자<br>
+            <br>
+            <형식>
+                조건식 ? 실행문1(조건식이 true 일때 실행) : 실행문2(조건식이 false 일때 실행)
         </p>
+        <br>
         <div class="script">
             <pre><code class="language-js">{
     const num = 100;
@@ -414,9 +417,9 @@ num++;
         <!-- //sample10 -->
         <br>
         <br>
-        <h3>11.break문 </h3>
+        <h3>11.break문(중지) </h3>
         <p>
-
+            break문을 만나면 형재 실행문 중지후 다음 실행문으로 넘어감
         </p>
         <div class="script">
             <pre><code class="language-js">{
@@ -445,7 +448,7 @@ num++;
         <br>
         <h3>12.contiune문</h3>
         <p>
-
+            contiune문은 특정조건을 만족했을시 그 값만 건너뛰기
         </p>
         <div class="script">
             <pre><code class="language-js">{
