--- a/site/imgType/imgType03_1.html
+++ b/site/imgType/imgType03_1.html
@@ -140,8 +140,12 @@
 
 
         .image__sns {
-            psi
+            position: absolute;
+            right: 10px;
+
         }
+
+        .image:hover .image__sns {}
 
         .image__sns a {
             width: 36px;
