--- a/html/basic.html
+++ b/html/basic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,48 +8,56 @@
     <title>html 기초</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             font-family: 'GmarketSans';
         }
+
         #header {
             padding: 2vw;
             border-bottom: 1px dashed #dedede;
         }
+
         #header h1 {
             font-size: 4vw;
-            margin-bottom: 2vw ;
+            margin-bottom: 2vw;
         }
+
         #header nav ul li {
             list-style: none;
             display: inline;
         }
+
         #header nav ul li a {
             text-decoration: none;
             color: #000;
             border: 1px solid #000;
             padding: 0.3vw 1vw;
             display: inline-block;
-       
+
         }
-        #header nav ul li a:hover{
+
+        #header nav ul li a:hover {
             background-color: #000;
             color: #fff;
         }
 
         /*미디어 쿼리*/
-        @media (max-width:800px){
-            #header{
+        @media (max-width:800px) {
+            #header {
                 padding: 16px;
             }
+
             #header h1 {
                 font-size: 40px;
             }
+
             #header nav ul a {
                 padding: 5px 10px;
                 font-size: 18px;
             }
+
             #contents {
                 padding: 16px;
             }
@@ -58,61 +67,74 @@
         #contents {
             padding: 2vw;
         }
+
         #contents .menu {
-            border-bottom:  1px dashed #dedede;
+            border-bottom: 1px dashed #dedede;
             padding-bottom: 2vw;
         }
+
         #contents .menu ul li {
             list-style: none;
             display: inline;
         }
+
         #contents .menu ul li a {
-            text-decoration: none;  
-            color:#000;
+            text-decoration: none;
+            color: #000;
             border: 1px solid #000;
             background-color: #000;
             color: #fff;
-            padding: 0.3vw 1vw 0.3vw 1vw; 
-            word-break:keep-all; /*단어끊기 :깔끔하게 떨어지게 함*/
+            padding: 0.3vw 1vw 0.3vw 1vw;
+            word-break: keep-all;
+            /*단어끊기 :깔끔하게 떨어지게 함*/
             margin-top: 0.7vw;
-            margin-bottom: 0.7vw ;
+            margin-bottom: 0.7vw;
             display: inline-block;
         }
+
         .article {
             padding: 2vw 0;
             line-height: 1.6;
         }
-        .article h2{
+
+        .article h2 {
             font-weight: normal;
             margin-bottom: 10px;
         }
+
         .article p {
             margin-bottom: 10px;
         }
+
         .article .table {
             width: 100%;
-            border-spacing:0;
+            border-spacing: 0;
             border-collapse: collapse;
             margin-bottom: 10px;
         }
+
         .article .table tr th {
-            border : 1px solid #dedede;
+            border: 1px solid #dedede;
             padding: 10px;
 
         }
+
         .article .table tr td {
-            border : 1px solid #dedede;
+            border: 1px solid #dedede;
             padding: 10px;
         }
+
         .article .table .center {
             text-align: center;
         }
+
         .article .box {
             background-color: #f5f5f5;
             padding: 15px;
         }
     </style>
 </head>
+
 <body>
     <header id="header">
         <h1>HTML</h1>
@@ -121,7 +143,7 @@
                 <li><a href="#">기초</a></li>
                 <li><a href="#">주제</a></li>
                 <li><a href="#">알파벳</a></li>
-            </ul>   
+            </ul>
         </nav>
     </header>
     <section id="contents">
@@ -138,41 +160,43 @@
             <h2>HTML5 기본문서</h2>
             <P>
                 html 기본문서의 &lt;html&gt;요소는 head 요소와 body 요소로 구성되어 있으며,
-                head 요소안에는 meta title link style script등의 요소들이 올 수 있습니다. 
+                head 요소안에는 meta title link style script등의 요소들이 올 수 있습니다.
             </P>
             <table class="table">
                 <thead>
                     <tr>
                         <th>요소명</th>
-                        <th>설명</th> 
+                        <th>설명</th>
                     </tr>
                 </thead>
+                <tbody>
+                    <tr>
+                        <td class="center">&lt;meta&gt;</td>
+                        <td>* HTML 문서의 설명, 키워드,문서의 작성자 등을 지정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td class="center">&lt;little&gt;</td>
+                        <td>*HTML문서의 제목을 지정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td class="center">&lt;link&gt;</td>
+                        <td>*외부의 CSS파일을 HTML문서에 연결할 때 사용합니다. </td>
+                    </tr>
+                    <tr>
+                        <td class="center">&lt;style&gt;</td>
+                        <td>*HTML문서 내에서 스타일(CSS)을 정의합니다.</td>
+                    </tr>
+                    <tr>
+                        <td class="center">&lt;script&gt;</td>
+                        <td>*자바스크립트를 HTML 문서 내부에서 정의하거나
+                            외부에서 자바스크립트 파일을 불러올 때 사용합니다. </td>
+                    </tr>
+                </tbody>
 
-                        <tr>
-                            <td  class="center">&lt;meta&gt;</td>
-                            <td>* HTML 문서의 설명, 키워드,문서의 작성자 등을 지정합니다.</td>  
-                        </tr>
-                        <tr>
-                            <td class ="center">&lt;little&gt;</td>
-                             <td>*HTML문서의 제목을 지정합니다.</td>
-                        </tr>
-                        <tr>
-                            <td  class="center">&lt;link&gt;</td>
-                            <td>*외부의 CSS파일을 HTML문서에 연결할 때 사용합니다. </td>  
-                        </tr>
-                        <tr>
-                            <td class ="center">&lt;style&gt;</td>
-                            <td>*HTML문서 내에서 스타일(CSS)을 정의합니다.</td>
-                        </tr>
-                        <tr>
-                            <td class ="center">&lt;script&gt;</td>
-                             <td>*자바스크립트를 HTML 문서 내부에서 정의하거나 
-                                외부에서 자바스크립트 파일을 불러올 때 사용합니다. </td>
-                        </tr>
-                        
 
             </table>
         </article>
-    </section>    
+    </section>
 </body>
+
 </html>
