--- a/site/imgType/imgType02.html
+++ b/site/imgType/imgType02.html
@@ -18,95 +18,106 @@
             padding: 0;
         }
 
+        a {
+            text-decoration: none;
+            color: #000;
+        }
 
-        body {}
+        img {
+            width: 100%;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-weight: normal;
+        }
 
         .section {
             width: 1160px;
-            height: 780px;
-            padding: 120px 20px 20px 20px;
+            padding: 120px 20px 120px 20px;
             margin: 0 auto;
-            min-width: 1160px;
+
+
 
         }
 
-        section>h2 {
-            text-align: center;
-            font-weight: normal;
+        .section>h2 {
             font-size: 50px;
-            margin-bottom: 20px;
+            padding-bottom: 20px;
+            text-align: center;
 
         }
 
         .section>p {
+            font-size: 24px;
+            padding-bottom: 50px;
             text-align: center;
-            font-weight: normal;
-            font-size: 24px;
-            margin-bottom: 50px;
-        }
-
-        .content .tit {
-
-            font-weight: normal;
-            font-size: 24px;
-            padding-top: 20px;
-
 
         }
 
-        .content a {
+        .tit {
+            font-size: 24px;
+            padding-bottom: 8px;
+        }
 
-            font-weight: normal;
+        .more {
             font-size: 16px;
-            color: #000;
-            text-decoration: none;
-
-
         }
 
-        .section .img__inner {
+        .img__inner {
+            width: 100%;
+            height: 520px;
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-between;
+
         }
 
         .content {
-            width: 32%;
             position: relative;
             overflow: hidden;
-
         }
+
+        .image {
+            vertical-align: top;
+            transition: all 0.3s ease-in-out;
+            /* ease-in-out : 전환(transition) 효과가 천천히 시작되어, 천천히 끝납니다. */
+        }
+
+        .image img {}
 
         .blure {
-            width: 100%;
-            height: 100px;
-            text-align: center;
-            margin: auto;
-            backdrop-filter: blur(5px);
-            box-sizing: border-box;
             position: absolute;
-            transition: all 0.3s ease-in;
             left: 0;
-            bottom: 0px;
+            bottom: 0;
+            box-sizing: border-box;
+            text-align: center;
+            width: 100%;
+            padding: 23px 20px;
+
+            backdrop-filter: blur(5px);
+            transition: all 0.3s ease-in;
+            /* ease-in : 전환(transition) 효과가 천천히 시작됩니다. */
+            box-sizing: border-box;
+            bottom: -100px;
+
         }
 
 
-
-        .image img {
-            vertical-align: top;
-            transition: all 0.5s ease-in;
-        }
 
         .img1 .blure {
             background: rgba(236, 236, 234, 0.1);
         }
 
         .img1 .blure .tit {
-            color: #555;
+            color: rgb(115, 114, 114);
         }
 
         .img1 .blure .more {
-            color: #555;
+            color: rgb(115, 114, 114);
         }
 
         .img2 .blure {
@@ -133,22 +144,15 @@
             color: #555;
         }
 
-        .image {}
-
-        .image img:hover .blure {
-            bottom: 100px;
-        }
-
         .content:hover .image img {
             transform: scale(1.03);
+            /* transform의 scale로 요소를 확대 또는 축소할 수 있습니다.
+            1은 원래의 크기이고 0.5, 1.5와 같은 배율로 지정할 수 있습니다. */
+
         }
 
-        .more :hover {
-            text-decoration: underline;
-        }
-
-        .content .blure .more {
-            /* display: inline-block; */
+        .content:hover .blure {
+            bottom: 0;
         }
     </style>
 </head>
@@ -162,21 +166,21 @@
                 <figure class="image"><img src="img/img01-01.jpg"></figure>
                 <div class="blure">
                     <P class="tit">배우 수잔</P>
-                    <a class="more" href="">자세히 보기</a>
+                    <a class="more" href="#">자세히 보기</a>
                 </div>
             </article>
             <article class="content img2">
                 <figure class="image"><img src="img/img01-02.jpg"></figure>
                 <div class="blure">
                     <P class="tit">배우 앤디</P>
-                    <a class="more" href="">자세히 보기</a>
+                    <a class="more" href="#">자세히 보기</a>
                 </div>
             </article>
             <article class="content img3">
                 <figure class="image"><img src="img/img01-03.jpg"></figure>
                 <div class="blure">
                     <P class="tit">배우 헤일리</P>
-                    <a class="more" href="">자세히 보기</a>
+                    <a class="more" href="#">자세히 보기</a>
                 </div>
             </article>
         </div>
