--- a/javascript/effect/searchEffect02.html
+++ b/javascript/effect/searchEffect02.html
@@ -36,12 +36,19 @@
             <h1>CSS 속성 검색하기</h1>
             <div class="search__box">
                 <label for="search">검색하기</label>
-                <input type="text" id="search" placeholder="HTML 태그를 입력해주세요!">
+                <input type="text" id="search" placeholder="CSS 속성 및 유형을 입력해주세요!">
+            </div>
+            <div class="search__info">
+                <div class="type">플렉스, 애니메이션, 백그라운드, 기타 등등 유형 별로 검색해보세요!</div>
+                <div>전체 속성 갯수 : <span class="num">0</span></div>
             </div>
 
             <div class="search__list">
                 <div class="css">
                     <ul>
+                        <li data-name="accent-color" data-type="효과"><strong>accent-color</strong> : accent-color 는 특정
+                            요소에 색상을 지정합니다.
+                        </li>
                         <li data-name="aline-content" data-type="플렉스"><strong>aline-content</strong>:align-content 속성은
                             콘텐츠 아이템의 상하관계 정렬
                             상태를 설정합니다..</li>
